// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tab Tab disabled tab 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="MuiTabs-root Tabs-horizontal"
    >
      <div
        class="MuiTabs-scrollable"
        style="width: 99px; height: 99px; position: absolute; top: -9999px; overflow: scroll;"
      />
      <div
        class="MuiTabs-scroller MuiTabs-scrollable"
        style="margin-bottom: 0px;"
      >
        <div
          class="MuiTabs-flexContainer"
          role="tablist"
        >
          <button
            aria-selected="false"
            class="MuiButtonBase-root MuiTab-root PicassoTab-horizontal MuiTab-textColorInherit Mui-disabled Mui-disabled"
            disabled=""
            role="tab"
            tabindex="-1"
            type="button"
          >
            <span
              class="MuiTab-wrapper PicassoTab-wrapper"
            >
              <div
                class="m-0 text-sm text-inherit font-semibold"
              >
                Tab Label
              </div>
            </span>
          </button>
        </div>
        <span
          class="PrivateTabIndicator-root PrivateTabIndicator-colorSecondary MuiTabs-indicator"
          style="left: 0px; width: 0px;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Tab Tab renders 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="MuiTabs-root Tabs-horizontal"
    >
      <div
        class="MuiTabs-scrollable"
        style="width: 99px; height: 99px; position: absolute; top: -9999px; overflow: scroll;"
      />
      <div
        class="MuiTabs-scroller MuiTabs-scrollable"
        style="margin-bottom: 0px;"
      >
        <div
          class="MuiTabs-flexContainer"
          role="tablist"
        >
          <button
            aria-selected="false"
            class="MuiButtonBase-root MuiTab-root PicassoTab-horizontal MuiTab-textColorInherit"
            role="tab"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiTab-wrapper PicassoTab-wrapper"
            >
              <div
                class="m-0 text-sm text-inherit font-semibold"
              >
                Tab Label
              </div>
            </span>
          </button>
        </div>
        <span
          class="PrivateTabIndicator-root PrivateTabIndicator-colorSecondary MuiTabs-indicator"
          style="left: 0px; width: 0px;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Tab Tab tab with icon 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="MuiTabs-root Tabs-horizontal"
    >
      <div
        class="MuiTabs-scrollable"
        style="width: 99px; height: 99px; position: absolute; top: -9999px; overflow: scroll;"
      />
      <div
        class="MuiTabs-scroller MuiTabs-scrollable"
        style="margin-bottom: 0px;"
      >
        <div
          class="MuiTabs-flexContainer"
          role="tablist"
        >
          <button
            aria-selected="false"
            class="MuiButtonBase-root MuiTab-root PicassoTab-horizontal MuiTab-textColorInherit MuiTab-labelIcon"
            role="tab"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiTab-wrapper PicassoTab-wrapper"
            >
              <div
                id="Icon"
              />
              <div
                class="m-0 text-sm text-inherit font-semibold"
              >
                Tab Label
              </div>
            </span>
          </button>
        </div>
        <span
          class="PrivateTabIndicator-root PrivateTabIndicator-colorSecondary MuiTabs-indicator"
          style="left: 0px; width: 0px;"
        />
      </div>
    </div>
  </div>
</div>
`;
